cabal-version:      2.4
name:               backend
version:            0.1.0.0
author:             iko
maintainer:         ilyakooo0@gmail.com
extra-source-files: CHANGELOG.md

executable backend
  ghcjs-options:      -dedupe
  ghcjs-options:      -DGHCJS_BUSY_YIELD=20 -DGHCJS_GC_INTERVAL=60000
  main-is:            Main.hs
  other-modules:      FFI
  build-depends:
    , aeson            <2.0.0.0
    , base
    , bytestring
    , containers
    , ghcjs-base-stub  ==0.3.0.1
    , relude
    , text
    , time

  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:
    -Weverything -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-safe -Wno-prepositive-qualified-module
    -Wno-missing-import-lists -Wno-all-missed-specialisations
    -Wno-missing-local-signatures -Wno-partial-fields -Wno-unsafe
    -Wno-monomorphism-restriction -Wno-missed-specialisations
    -Wno-unused-packages -Wno-partial-type-signatures
    -Wno-unticked-promoted-constructors -threaded

  default-extensions:
    AllowAmbiguousTypes
    ApplicativeDo
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MonoLocalBinds
    MultiParamTypeClasses
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PolyKinds
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns
